# Thesis-work

./: CMakeLists.txt  discretize_geom.cpp  pseudoDiscGeom.txt  single_scaling_rayfires.sh  single_scaling_voxels.sh  test_nums.sh
src/: discretize.cpp  discretize.h
tests/: 2LineVoxel.h5m  3LineVoxel.h5m  4LineVoxel.h5m
